# ARK-Drop-Desktop

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  vite.config.js  vite.config.ts
.github/workflows/: build-library.yml  build.yml  check-and-lint.yml
bindings/arkbuilders/core/drop/: drop_core.kt
bindings/uniffi/drop_core/: drop_core.kt
core/: Cargo.toml  uniffi.toml
core/.cargo/: config.toml
core/src/: adapter.rs  erorr.rs  error.rs  lib.rs  metadata.rs  send.rs
src/: app.css  app.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: camera.toml
src-tauri/src/: lib.rs  lib2.rs  main.rs
src/lib/: types.ts  util.ts
src/lib/components/: Button.svelte  Code.svelte  ConfirmationCode.svelte  FileTransfer.svelte  FileUploaded.svelte  HashCode.svelte  NavBar.svelte  QrCode.svelte
src/lib/components/icons/: ArrowCircleBrokenDown.svelte  ArrowCircleBrokenUp.svelte  CheckCircle.svelte  ChevronLeft.svelte  ChevronRight.svelte  ChevronUp.svelte  Clipboard.svelte  ClockRewind.svelte  Edit05.svelte  Eye.svelte  EyeOff.svelte  File06.svelte  FileType.svelte  FilterLines.svelte  FolderDownload.svelte  Link03.svelte  Lock03.svelte  MessageQuestionSquare.svelte  PlusCircle.svelte  Scan.svelte  ShieldTick.svelte  Star01.svelte  SwitchVertical02.svelte  User03.svelte  XCircle.svelte  XClose.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/history/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/edit-profile/: +page.svelte
src/routes/transfers/: +page.svelte
src/routes/transfers/failed/: +page.svelte
src/routes/transfers/receive/: +page.svelte
src/routes/transfers/receive/confirm/: +page.svelte  +page.ts
src/routes/transfers/recieve/: +page.svelte
src/routes/transfers/recieve/confirm/: +page.svelte  +page.ts
src/routes/transfers/send/: +page.svelte  +page.ts
src/routes/transfers/transferring/: +page.svelte  +page.ts
uniffi-bingen/: Cargo.toml
