[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.dependencies]
iroh-blobs = { version = "0.90" }
iroh = "0.90"

anyhow = "1.0.86"
thiserror = "1.0.61"

futures-buffered = "0.2.4"
futures-lite = "2.3.0"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
bytes = "1.6.0"
tracing-subscriber = "0.3.19"

[profile.dev]
opt-level = 1
