[workspace]
resolver = "2"
members = ["core", "src-tauri"]

[workspace.dependencies]
# ARK-Builders/ark-core
dropx-sender = { git = "https://github.com/ARK-Builders/ark-core", rev = "69ca7d8f76cab1514502cb6c8a09de77c01d3234" }
dropx-receiver = { git = "https://github.com/ARK-Builders/ark-core", rev = "69ca7d8f76cab1514502cb6c8a09de77c01d3234" }
dropx-common = { git = "https://github.com/ARK-Builders/ark-core", rev = "69ca7d8f76cab1514502cb6c8a09de77c01d3234" }
drop-entities = { git = "https://github.com/ARK-Builders/ark-core", rev = "69ca7d8f76cab1514502cb6c8a09de77c01d3234" }

# Keep existing dependencies that are still needed
anyhow = "1.0.86"
thiserror = "1.0.61"
futures-buffered = "0.2.6"
futures-lite = "2.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
bytes = "1.6.0"
