[package]
name = "drop_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "drop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-base = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-buffered = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
rand.workspace = true
tokio.workspace = true

postcard = "1.0.8"
uniffi = { version = "0.28.0" }
data-encoding = "2.6.0"
async-channel = "2.3.1"
tracing-subscriber = "0.3.19"

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
