[package]
name = "drop_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "drop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-buffered = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
rand.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true }

postcard = "1.0.8"
data-encoding = "2.6.0"
async-channel = "2.3.1"
n0-future = "0.1.3"
walkdir = "2.5.0"
tracing = "0.1.41"
num_cpus = "1.17.0"
