[package]
name = "drop_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "drop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# ARK-Builders/ark-core
dropx-sender = { workspace = true }
dropx-receiver = { workspace = true }
dropx-common = { workspace = true }
drop-entities = { workspace = true }

# Keep existing dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
futures-buffered = { workspace = true }
futures-lite = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
